z-index fixed

--- a/src/assets/scss/components/image-left-text-right.module.scss
+++ b/src/assets/scss/components/image-left-text-right.module.scss
@@ -64,6 +64,7 @@
     @include lg-screen {
 
         padding: 268px 192px 434px 156px;
+        z-index: 0;
 
     }
 }
